--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <aside>
         <div class="intro">
-            <h1>DADOS </h1>
+            <h1>DADOS ERÓTICOS</h1>
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
