--- a/jogar.html
+++ b/jogar.html
@@ -4,7 +4,6 @@
 
         <div class="colunaesq">
             <p> 
-                
                 <label for="perguntas"><img src="./img/verdade.png" alt="verdade">Verdades e Desafios</label>
                 <input type="checkbox" name="perguntas" id="perguntas" checked>
             </p>
@@ -20,7 +19,7 @@
                 <button title="Avançar o jogo" onclick="apelar()"><img src="/img/avancar.png" alt=""></button>
             </p>
             <p>
-                <button title="tocar músicas" onplay="play()"><img src="/img/musica1.png" alt=""></button>
+                <button title="tocar músicas" onclick="audio.play()"><img src="/img/musica1.png" alt=""></button>
             </p>
             <p>
                 00:00:00
