--- a/playlist.html
+++ b/playlist.html
@@ -3,7 +3,7 @@
     <h1>PLAYLIST SUGERIDA</h1>
     <p>Aqui estão algumas sugestões de músicas para curtirem esse momento. Dica: abram em uma plataforma de streaming.</p>
     <ol>
-        <li><a href="https://www.youtube.com/watch?v=kZ2bXzlh2WM&ab_channel=SergeGainsbourg-Topic" target="_blank">
+        <li><a onclick="play1()" href="https://www.youtube.com/watch?v=kZ2bXzlh2WM&ab_channel=SergeGainsbourg-Topic" target="_blank">
             Serge Gainsbourg & Jane Birkin - Je taime moi non plus</a> </li>
         <li><a href="https://www.youtube.com/watch?v=hOllF3TgAsM&ab_channel=BushVEVO" target="_blank">
             Bush - Glycerine</a> </li>
@@ -56,3 +56,5 @@
     </ol>
     </div>   
 </section>
+
+
