--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <aside>
         <div class="intro">
-            <h1>DADOS ERÓTICOS</h1>
+            <h1>DADOS </h1>
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
@@ -38,6 +38,7 @@
 
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/jogofinal.js"></script>
+  <script src="./assets/js/playlist.js"></script>
     
 </body>
 </html>
