--- a/index.html
+++ b/index.html
@@ -38,7 +38,4 @@
 
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/jogofinal.js"></script>
-  <script src="./assets/js/playlist.js"></script>
-    
-</body>
-</html>
+  <script src="/assets/js/play.js"></script>
