--- a/jogar.html
+++ b/jogar.html
@@ -4,7 +4,7 @@
 
         <div class="colunaesq">
             <p> 
-                <label for="perguntas"><img src="./img/verdade.png" alt="verdade">Verdades e Desafios</label>
+                <label for="perguntas"><img src="./img/verdade.png" alt="verdade e desafios">Verdades e Desafios</label>
                 <input type="checkbox" name="perguntas" id="perguntas" checked>
             </p>
             <p>
@@ -36,14 +36,14 @@
 
             <div class="jogo">
                 <div>
-                    LISTA MULHER
+                    <h6 class="armariom">LISTA MULHER</h6> 
                 </div>
                 <div>
                     <button onclick="dadoela()">ELA</button>
                     <button onclick="dadoele()">ELE</button>
                 </div>
                 <div>
-                    LISTA HOMEM
+                    <h6 class="armarioh">LISTA HOMEM</h6> 
                 </div>
             </div>
 
