--- a/jogar.html
+++ b/jogar.html
@@ -4,22 +4,22 @@
 
         <div class="colunaesq">
             <p> 
-                <label for="perguntas"><img src="./img/verdade.png" alt="verdade e desafios">Verdades e Desafios</label>
+                <label title="Verdades e desafios" for="perguntas"><img src="/assets/img/verdade.png" alt="verdade e desafios">Verdades e Desafios</label>
                 <input type="checkbox" name="perguntas" id="perguntas" checked>
             </p>
             <p>
                 
-                <label for="drink"><img src="./img/drink.jpg" alt="drink">Drinks</label>
+                <label title="Drinks" for="drink"><img src="/assets/img/drink.jpg" alt="drink">Drinks</label>
                 <input type="checkbox" name="drink" id="drink">
             </p>
             <p>
-                <button title="Iniciar/reiniciar" onclick="resetar()"><img src="/img/iniciar.png" alt=""></button>
+                <button title="Iniciar/reiniciar" onclick="resetar()"><img src="/assets/img/iniciar.png" alt=""></button>
             </p>
             <p>
-                <button title="Avançar o jogo" onclick="apelar()"><img src="/img/avancar.png" alt=""></button>
+                <button title="Avançar o jogo" onclick="apelar()"><img src="/assets/img/avancar.png" alt=""></button>
             </p>
             <p>
-                <button title="tocar músicas" onclick="audio.play()"><img src="/img/musica1.png" alt=""></button>
+                <button title="Tocar música" onclick="audio.play()"><img src="/assets/img/musica1.png" alt=""></button>
             </p>
             <p>
                 00:00:00
@@ -30,7 +30,7 @@
 
             <div class="versus">
                 <h3 class="jogador1">JOGADOR 1</h3>
-                <img src="./img/versus.png" alt="versus">
+                <img src="/assets/img/versus.png" alt="versus">
                 <h3 class="jogador2">JOGADOR 2</h3>
             </div>
 
