--- a/playlist.html
+++ b/playlist.html
@@ -1,8 +1,7 @@
 <section class="sec conteudo img2" id="playlist">
     <div class="play">
     <h1>PLAYLIST SUGERIDA</h1>
-    <p>Aqui estão algumas sugestões de músicas para curtirem esse momento. Dica: abram em uma plataforma de streaming,
-       criem sua própria playlist e "som na caixa"!.</p>
+    <p>Aqui estão algumas sugestões de músicas para curtirem esse momento. Dica: criem sua própria playlist em uma plataforma de streaming e "som na caixa"!</p>
     <ol>
         <li><a onclick="play1()" href="https://www.youtube.com/watch?v=kZ2bXzlh2WM&ab_channel=SergeGainsbourg-Topic" target="_blank">
             Serge Gainsbourg & Jane Birkin - Je taime moi non plus</a> </li>
@@ -54,5 +53,9 @@
             Masked Wolf - Astronaut In The Ocean</a></li>
         <li><a onclick="play25()"  href="https://www.youtube.com/watch?v=UceaB4D0jpo&ab_channel=PostMaloneVEVO" target="_blank">
             Post Malone - rockstar ft. 21 Savage</a></li>
+        <li><a onclick="play26()"  href="https://www.youtube.com/watch?v=qod03PVTLqk&ab_channel=EltonJohnVEVO" target="_blank">
+            Elton John, Dua Lipa - Cold Heart</a></li>
     </ol>
     </div
+
+    
