--- a/regras.html
+++ b/regras.html
@@ -1,7 +1,7 @@
 <section class="sec conteudo img1" id="regras">
     <div class="regra">
         <div>
-            <img src="./img/dadofogo.png" alt="dado">
+            <img src="/assets/img/dadofogo.png" alt="dado">
         </div>
         <div class="reg">
 
