--- a/home.html
+++ b/home.html
@@ -1,9 +1,10 @@
 <section class="sec conteudo" id="home">
     <div class="home"> 
-        <img class="a" src="./img/foguinhos.webp" alt="fogo"> 
+        <img class="a" src="/assets/img/foguinhos.webp" alt="fogo"> 
         <p>Sejam bem-vindos! Escolham um ambiente agradável, uma trilha sonora excitante, deixem a timidez de lado e fiquem à vontade. 
             Se quiserem apimentar um pouquinho mais, acrescentem alguns drinks,
          claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p>
-         <div class="b"><img src="./img/foguinhos.webp" alt="fogo"></div>
+         <div class="b"><img src="/assets/img/foguinhos.webp" alt="fogo"></div>
     </div>
+    <button class="menuplay" onclick="audio.play()">play</button>
 </section>
