--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <aside>
         <div class="intro">
-            <h1>DADOS ERÓTICOS</h1>
+            <h1>DADOS </h1>
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
@@ -25,15 +25,19 @@
     </aside>
 
     
-    <div class="resultado"><section class="sec conteudo" id="home">
-        <div class="home"> 
-            <img class="a" src="/assets/img/foguinhos.webp" alt="fogo"> 
-            <p>Sejam bem-vindos! Escolham um ambiente agradável, uma trilha sonora excitante, deixem a timidez de lado e fiquem à vontade. 
-                Se quiserem apimentar um pouquinho mais, acrescentem alguns drinks,
-             claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p>
-             <div class="b"><img src="/assets/img/foguinhos.webp" alt="fogo"></div>
-        </div>
-    </section></div>
+    <div class="resultado">
+        <section class="sec conteudo" id="home">
+            <div class="home"> 
+                <img class="a" src="/assets/img/foguinhos.webp" alt="fogo"> 
+                <p>Sejam bem-vindos! Escolham um ambiente agradável, uma trilha sonora excitante, deixem a timidez de lado e fiquem à vontade. 
+                   Se quiserem apimentar um pouquinho mais, acrescentem alguns drinks,
+                   claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p>
+                <div class="b"><img src="/assets/img/foguinhos.webp" alt="fogo"></div>
+            </div>
+            <button class="menuplay" onclick="audio.play()">play</button>           
+        </section>
+        
+    </div>
    
 
   <script src="./assets/js/main.js"></script>
