--- a/jogar.html
+++ b/jogar.html
@@ -47,8 +47,8 @@
                 </div>
             </div>
 
-            <div class="resultadojogo">
-                <h4>?</h4>
+            <div>
+                <h6 class="resultadojogo">?</h6>
             </div>
         </div>
 
