--- a/regras.html
+++ b/regras.html
@@ -1,4 +1,4 @@
-<section class="sec conteudo img1" id="regras">
+<section class="sec conteudor img1" id="regras">
     <div class="regra">
         <div>
             <img src="/assets/img/dadofogo.png" alt="dado">
