--- a/jogar.html
+++ b/jogar.html
@@ -30,7 +30,7 @@
 
             <div class="versus">
                 <h3 class="jogador1">JOGADOR 1</h3>
-                <img src="/assets/img/versus.png" alt="versus">
+                <img src="/assets/img/versusl.png" alt="versus">
                 <h3 class="jogador2">JOGADOR 2</h3>
             </div>
 
