--- a/home.html
+++ b/home.html
@@ -5,5 +5,5 @@
          claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p>
         
     </div>
-    <img onclick="play()" class="menuplay" src="/assets/img/audiorosa.gif" alt="">
+    <img id="bottom" class="menuplay" src="/assets/img/subsilver.jpg" title="ativar áudio" alt="áudio ativado">
 </section>
