--- a/jogar.html
+++ b/jogar.html
@@ -4,7 +4,7 @@
 
         <div class="colunaesq">
             <p> 
-                <label title="Verdades e desafios" for="perguntas"><img class="perguntas" src="/assets/img/verdade.png" alt="verdade e desafios">Verdades e Desafios</label>
+                <label title="Verdades e desafios" for="perguntas"><img class="perguntas" src="/assets/img/verdade.png" alt="verdade e desafios">Verdades/Desafios</label>
                 <input type="checkbox" name="perguntas" id="perguntas" checked>
             </p>
             <p>
@@ -17,9 +17,6 @@
             </p>
             <p>
                 <button title="Avançar o jogo" onclick="apelar()"><img src="/assets/img/avancar.png" alt=""></button>
-            </p>
-            <p>
-                <button title="Tocar música" onclick="audio.play()"><img src="/assets/img/musica1.png" alt=""></button>
             </p>
             <p class="crono">
                 00:00:00
@@ -53,14 +50,5 @@
         </div>
 
     </div>
-
-
-
-
-
-
-
-
-
 
 </section>
