--- a/regras.html
+++ b/regras.html
@@ -12,7 +12,7 @@
             e deverá rolar,
             alternadamente. A cada clique realize a ação que for solicitada. Cliquem nos dados até quando desejarem, 
             ou quando não for mais necessário! 
-            O objetivo é se divertir e curtir um ao outro!!! 
+            O objetivo é se divertir e curtir um ao outro!!! Para iniciar o jogo abra o menu e selecione suas opções.
             </p>
         <p><u> DRINKS/VERDADES E DESAFIOS:</u> Para uma experiência mais completa e apimentar o jogo, 
             acrescentem alguns drinks e o famoso jogo VERDADES e DESAFIOS. Aleatoriamente deverão responder perguntas íntimas e/ou concluir
