--- a/jogar.html
+++ b/jogar.html
@@ -4,7 +4,7 @@
         
         <div class="colunaesq1">
             <label title="Abrir menu" class="abri" for="abri">MENU</label>
-            <input title="menu" class="abri" type="checkbox" name="" id="abri">
+            <input title="menu" class="abri" type="checkbox" name="menu" id="abri">
             <div class="colunaesq" id="abrir">
                 <p> 
                     <label title="Ativar verdades e desafios" for="perguntas"><img class="perguntas" src="/assets/img/verdade.png" alt="Ativar verdade e desafios">Verdades/Desafios</label>
@@ -35,19 +35,19 @@
 
             <div class="jogo">
                 <div>
-                    <h6 type="checkbox" class="armariom"></h6> 
+                    <h6 class="s armariom"></h6> 
                 </div>
-                <div>
+                <div class="dice">
                     <button onclick="dadoela()">ELA</button>
                     <button onclick="dadoele()">ELE</button>
                 </div>
                 <div>
-                    <h6 class="armarioh"></h6> 
+                    <h6 class="s armarioh"></h6> 
                 </div>
             </div>
 
             <div>
-                <h6 class="resultadojogo">?</h6>
+                <h5 class="resultadojogo">?</h5>
             </div>
         </div>
 
