--- a/jogar.html
+++ b/jogar.html
@@ -16,7 +16,7 @@
                     <input type="checkbox" name="drink" id="drink">
                 </p>
                 <p>
-                    <button class="cont" title="Iniciar/reiniciar" onclick="resetar()"><img src="/assets/img/iniciar.png" alt=""></button>
+                    <button class="cont" title="Iniciar/reiniciar o jogo" onclick="resetar()"><img src="/assets/img/iniciar.png" alt=""></button>
                 </p>
                 <p>
                     <button title="Avançar o jogo" onclick="apelar()"><img src="/assets/img/avancar.png" alt=""></button>
@@ -38,8 +38,8 @@
                     <h6 class="s armariom"></h6> 
                 </div>
                 <div class="dice">
-                    <button onclick="dadoela()">ELA</button>
-                    <button onclick="dadoele()">ELE</button>
+                    <button title="Rolar dado ela" onclick="dadoela()">♀</button>
+                    <button title="Rolar dado ele"  onclick="dadoele()">♂</button>
                 </div>
                 <div>
                     <h6 class="s armarioh"></h6> 
@@ -47,7 +47,7 @@
             </div>
 
             <div>
-                <h5 class="resultadojogo">?</h5>
+                <h5 class="resultadojogo">💜</h5>
             </div>
         </div>
 
