--- a/jogar.html
+++ b/jogar.html
@@ -38,8 +38,8 @@
                     <h6 class="s armariom"></h6> 
                 </div>
                 <div class="dice">
-                    <button title="Rolar dado ela" onclick="dadoela()">♀</button>
-                    <button title="Rolar dado ele"  onclick="dadoele()">♂</button>
+                    <button class="levelm" title="Rolar dado ela" onclick="dadoela()">♀</button>
+                    <button class="levelh" title="Rolar dado ele"  onclick="dadoele()">♂</button>
                 </div>
                 <div>
                     <h6 class="s armarioh"></h6> 
