--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dados Eróticos</title>
+    <title>Dados </title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/img/versus.png" type="image/x-icon">
 </head>
@@ -29,7 +29,8 @@
             <div class="home">  
                 <p>Sejam bem-vindos! Escolham um ambiente agradável, uma trilha sonora excitante, deixem a timidez de lado e fiquem à vontade. 
                    Se quiserem apimentar um pouquinho mais, acrescentem alguns drinks,
-                   claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p>
+                   claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p><br><br>
+                <img style="width: 18rem; height: 18rem;" src="/assets/img/dados11100.png" alt="">
             </div>        
         </section> 
     </div>
