--- a/jogar.html
+++ b/jogar.html
@@ -8,12 +8,12 @@
             <div class="colunaesq" id="abrir">
                 <p> 
                     <label title="Ativar verdades e desafios" for="perguntas"><img class="perguntas" src="/assets/img/verdade.png" alt="Ativar verdade e desafios">Verdades/Desafios</label>
-                    <input type="checkbox" name="perguntas" id="perguntas">
+                    <input class="click" type="checkbox" name="perguntas" id="perguntas">
                 </p>
                 <p>
                     
                     <label title="Ativar drinks" for="drink"><img src="/assets/img/drink.jpg" alt="Ativar drink">Drinks</label>
-                    <input type="checkbox" name="drink" id="drink">
+                    <input class="click" type="checkbox" name="drink" id="drink">
                 </p>
                 <p>
                     <button class="cont" title="Iniciar/reiniciar o jogo" onclick="resetar()"><img src="/assets/img/iniciar.png" alt=""></button>
