--- a/jogar.html
+++ b/jogar.html
@@ -3,17 +3,17 @@
     <div class="jogofinal">
         
         <div class="colunaesq1">
-            <label title="Abrir menu" class="abri" for="abri">MENU</label>
+            <label title="Abrir menu" class="abri click" for="abri">MENU</label>
             <input title="menu" class="abri" type="checkbox" name="menu" id="abri">
             <div class="colunaesq" id="abrir">
                 <p> 
-                    <label title="Ativar verdades e desafios" for="perguntas"><img class="perguntas" src="/assets/img/verdade.png" alt="Ativar verdade e desafios">Verdades/Desafios</label>
-                    <input class="click" type="checkbox" name="perguntas" id="perguntas">
+                    <label title="Ativar verdades e desafios" for="perguntas"><img class="click" class="perguntas" src="/assets/img/verdade.png" alt="Ativar verdade e desafios">Verdades/Desafios</label>
+                    <input type="checkbox" name="perguntas" id="perguntas">
                 </p>
                 <p>
                     
-                    <label title="Ativar drinks" for="drink"><img src="/assets/img/drink.jpg" alt="Ativar drink">Drinks</label>
-                    <input class="click" type="checkbox" name="drink" id="drink">
+                    <label title="Ativar drinks" for="drink"><img class="click" src="/assets/img/drink.jpg" alt="Ativar drink">Drinks</label>
+                    <input type="checkbox" name="drink" id="drink">
                 </p>
                 <p>
                     <button class="cont" title="Iniciar/reiniciar o jogo" onclick="resetar()"><img src="/assets/img/iniciar.png" alt=""></button>
@@ -47,7 +47,7 @@
             </div>
 
             <div>
-                <h5 class="resultadojogo"><img src="/assets/img/roxinho.png" alt=""></h5>
+                <h5 class="resultadojogo"><img src="/assets/img/roxinhofogosem.png" alt=""></h5>
             </div>
         </div>
 
