--- a/jogar.html
+++ b/jogar.html
@@ -3,7 +3,7 @@
     <div class="jogofinal">
         
         <div class="colunaesq1">
-            <label title="Abrir menu" class="abri click" for="abri">MENU</label>
+            <label title="Abrir menu" class="abri clickmenu" for="abri">MENU</label>
             <input title="menu" class="abri" type="checkbox" name="menu" id="abri">
             <div class="colunaesq" id="abrir">
                 <p> 
