--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Sejam bem-vindos! Escolham um ambiente agradável, uma trilha sonora excitante, deixem a timidez de lado e fiquem à vontade. 
                    Se quiserem apimentar um pouquinho mais, acrescentem alguns drinks,
                    claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p><br><br>
-                <img style="width: 18rem; height: 18rem;" src="/assets/img/dados11100.png" alt="">
+                <img class="dadoroxo" src="/assets/img/dados11100.png" alt="">
             </div>        
         </section> 
     </div>
