--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dados Eróticos</title>
+    <title>Dados </title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/img/versus.png" type="image/x-icon">
 </head>
 <body>
-
+    
+    <input type="checkbox" aria-label="close" id="close" class="close" role="button">
+    <label for="close" class="closelabel" title="close"></label>
     <aside>
         <div class="intro">
-            <h1>DADOS ERÓTICOS</h1>
+            <h1>DADOS </h1>
             <nav>
-                <ul>
+                <ul onclick="getElementById('close').checked=false;">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="regras.html">Regras</a></li>
                     <li><a href="jogar.html">Jogar</a></li>
