--- a/jogar.html
+++ b/jogar.html
@@ -47,7 +47,7 @@
             </div>
 
             <div>
-                <h5 class="resultadojogo"><img src="/assets/img/roxinhofogosem.png" alt=""></h5>
+                <h5 class="resultadojogo"><img src="/assets/img/roxinho.png" alt=""></h5>
             </div>
         </div>
 
