--- a/playlist.html
+++ b/playlist.html
@@ -1,4 +1,5 @@
 <section class="sec conteudo img2" id="playlist">
+    <img class="clavemenor" src="/assets/img/clave3menor.png" alt="">
     <div class="play">
         <h1>PLAYLIST SUGERIDA</h1>
         <p>Aqui estão algumas sugestões de músicas para curtirem esse momento. Dica: criem sua própria playlist em uma plataforma de streaming e "som na caixa"!</p>
