--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <label for="close" class="closelabel" title="close"></label>
     <aside>
         <div class="intro">
-            <h1>DADOS </h1>
+            <h1>DADOS ERÓTICOS</h1>
             <nav>
                 <ul onclick="getElementById('close').checked=false;">
                     <li><a href="home.html">Home</a></li>
