--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <label for="close" class="closelabel" title="close"></label>
     <aside>
         <div class="intro">
-            <h1>DADOS ERÓTICOS</h1>
+            <h1>DADOS </h1>
             <nav>
                 <ul onclick="getElementById('close').checked=false;">
                     <li><a href="home.html">Home</a></li>
@@ -31,7 +31,9 @@
             <div class="home">  
                 <p>Sejam bem-vindos! Escolham um ambiente agradável, uma trilha sonora excitante, deixem a timidez de lado e fiquem à vontade. 
                    Se quiserem apimentar um pouquinho mais, acrescentem alguns drinks,
-                   claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!</p><br><br>
+                   claro sempre com moderação. Aqui vale tudo, seus desejos e imaginação são o limite! Que os jogos comecem! Divirtam-se!!!
+                   <small>Aperte F11 para aprimorar a experiência.</small>
+                </p><br><br>
                 <img class="dadoroxo" src="/assets/img/dados11100.png" alt="">
             </div>        
         </section> 
