--- a/regras.html
+++ b/regras.html
@@ -7,12 +7,10 @@
             <h2>REGRAS</h2>
 
             <p><u>ROLAR OS DADOS:</u>  Casal é bem simples. Aqui é onde tudo acontece. 
-                O jogo consta de 2 níveis. Nível 1 - fase de preliminares, feita para deixá-los à vontade e no clima. Nível 2 - fase para se pegarem gostoso e "partir para o crime"! 
-                Cada participante tem seus dados
-                e deverá rolar,
-                alternadamente. A cada clique realize a ação que for solicitada. Cliquem nos dados até quando desejarem, 
-                ou quando não for mais necessário! 
-                O objetivo é se divertir e curtir um ao outro!!! Para iniciar o jogo abra o menu e selecione suas opções.
+                O jogo consta de 2 níveis. Nível 1 => fase de preliminares, feita para deixá-los à vontade e no clima. Nível 2 => fase mais caliente, para se pegarem gostoso e "partir para o crime"! 
+                Cada participante tem seus dados e deverá rolar, alternadamente. Se achar necessário, é permitido re-rolar os dados. A cada clique realize a ação que for solicitada. Cliquem 
+                nos dados até quando desejarem, ou quando não for mais necessário! 
+                O objetivo é se divertir e curtir um ao outro!!! Para iniciar o jogo abra o menu, selecione suas opções e clique em play.
                 </p>
             <p><u> DRINKS/VERDADES E DESAFIOS:</u> Para uma experiência mais completa e apimentar o jogo, 
                 acrescentem alguns drinks e o famoso jogo VERDADES e DESAFIOS. Aleatoriamente deverão responder perguntas íntimas e/ou concluir
@@ -20,8 +18,7 @@
                 Se surpreenderão. Se quiserem, podem incrementar também com alguns brinquedinhos e apetrechos. 
                 A decoração é um ponto a parte e pode fazer toda a diferença.
                 Vale tudo, velas, pétalas de rosas, aromas, algemas, vendas, etc.</p>
-            <p><u> AVANÇAR:</u> esta opção vai avançar o jogo. Isto pulará algumas etapas. Válida para os casais apressadinhos
-                    ou com tempo restrito. 
+            <p><u> AVANÇAR:</u> esta opção vai avançar o jogo. Isto pulará algumas etapas. Válida para os casais apressadinhos ou com tempo restrito. 
                     Usem com sabedoria, pois pode deixar o jogo NÃO tão excitante e perderem a oportunidade de ter uma experiência única. 
                     Não tenham pressa!
                     Divirtam-se!!!</p>
