--- a/regras.html
+++ b/regras.html
@@ -9,7 +9,7 @@
             <p><u>ROLAR OS DADOS:</u>  Casal é bem simples. Aqui é onde tudo acontece. 
                 O jogo consta de 2 níveis. Nível 1 => fase de preliminares, feita para deixá-los à vontade e no clima. Nível 2 => fase mais caliente, para se pegarem gostoso e "partir para o crime"! 
                 Cada participante tem seus dados e deverá rolar, alternadamente. Se achar necessário, é permitido re-rolar os dados. A cada clique realize a ação que for solicitada. Cliquem 
-                nos dados até quando desejarem, ou quando não for mais necessário! 
+                nos dados até quando desejarem, ou quando não for mais necessário! O tempo mínimo ideal para cada ação da fase 1 é de pelo menos 15 segundos. 
                 O objetivo é se divertir e curtir um ao outro!!! Para iniciar o jogo abra o menu, selecione suas opções e clique em play.
                 </p>
             <p><u> DRINKS/VERDADES E DESAFIOS:</u> Para uma experiência mais completa e apimentar o jogo, 
