--- a/playlist.html
+++ b/playlist.html
@@ -2,7 +2,7 @@
     <img class="clavemenor" src="/assets/img/clave3menor.png" alt="">
     <div class="play">
         <h1>PLAYLIST SUGERIDA</h1>
-        <p>Aqui estão algumas sugestões de músicas para curtirem esse momento. Se preferirem, utilizem uma plataforma de streaming, toque a playlist do seu smartphone, ou ligue o aparelho de som! Uma trilha sonora é importante e fará toda a diferença!</p>
+        <p>Sugestões de músicas para curtirem esse momento. Se preferirem, utilizem uma plataforma de streaming, toque a playlist do seu smartphone, ou ligue o aparelho de som! Uma trilha sonora é importante e fará toda a diferença!</p>
         <ol>
             <li><a onclick="play1()" href="https://www.youtube.com/watch?v=kZ2bXzlh2WM&ab_channel=SergeGainsbourg-Topic" target="_blank">
                 Serge Gainsbourg & Jane Birkin - Je taime moi non plus</a> </li>
